b-creative - renames cross files, moved postintall message to yeoman, added vhost var to gulp, new scss and js imports

--- a/generators/app/templates/static/scss/style.scss
+++ b/generators/app/templates/static/scss/style.scss
@@ -22,7 +22,7 @@
 @import "settings/settings.config";
 
 // THIRD PARTY TOOLS
-@import "~poly-fluid-sizing";
+@import "node_modules/poly-fluid-sizing/poly-fluid-sizing";
 
 // GENERIC
 @import "generic/generic.reset";
