b-creative - style.scss bloat solution

--- a/generators/app/templates/static/scss/settings/_settings.breakpoints.scss
+++ b/generators/app/templates/static/scss/settings/_settings.breakpoints.scss
@@ -5,9 +5,9 @@ $breakpoint-xl: 1400px;
 $breakpoint-xxl: 2000px;
 
 $settings-breakpoints: (
-	"sm": $breakpoint-sm,
-	"md": $breakpoint-md,
-	"lg": $breakpoint-lg,
-	"xl": $breakpoint-xl,
-	"xxl": $breakpoint-xxl
+    "sm": $breakpoint-sm,
+    "md": $breakpoint-md,
+    "lg": $breakpoint-lg,
+    "xl": $breakpoint-xl,
+    "xxl": $breakpoint-xxl,
 );
