--- a/generators/app/templates/static/scss/style.scss
+++ b/generators/app/templates/static/scss/style.scss
@@ -1,45 +1,28 @@
 @charset "utf-8";
 
 // TOOLS
-@import "tools/tools.string";
-@import "tools/tools.number";
-@import "tools/tools.config";
-@import "tools/tools.colors";
-@import "tools/tools.breakpoints";
-@import "tools/tools.fonts";
-@import "tools/tools.transitions";
-@import "tools/tools.zindex";
-@import "tools/tools.viewport";
-@import "tools/tools.font-face";
+@import "tools/tools.index";
 
 // SETTINGS
-@import "settings/settings.breakpoints";
-@import "settings/settings.transitions";
-@import "settings/settings.zindex";
-@import "settings/settings.colors";
-@import "settings/settings.fonts";
-@import "settings/settings.font-size";
-@import "settings/settings.config";
-
-// THIRD PARTY TOOLS
-@import "node_modules/poly-fluid-sizing/poly-fluid-sizing";
+@import "settings/settings.index";
 
 // GENERIC
-@import "generic/generic.reset";
+@import "generic/generic.index";
 
 // ELEMENTS
-@import "elements/elements.html";
-@import "elements/elements.links";
-@import "elements/elements.headings";
+@import "elements/elements.index";
 
 // OBJECTS
-@import "objects/objects.sections";
-@import "objects/objects.container";
+@import "objects/objects.index";
 
 // COMPONENTS
+@import "components/components.index";
 
-// PLUGINS
+// PAGES
+@import "pages/pages.index";
 
 // UTILITIES
-@import "utilities/utilities.typography";
-@import "utilities/utilities.icons";
+@import "utilities/utilities.index";
+
+// VENDOR
+@import "vendor/vendor.index";
