--- a/generators/app/templates/static/scss/tools/_tools.index.scss
+++ b/generators/app/templates/static/scss/tools/_tools.index.scss
@@ -9,5 +9,7 @@
 @import "tools.viewport";
 @import "tools.zindex";
 
-// THIRD PARTY TOOLS
+/**
+ * Third party tools
+ */
 @import "node_modules/poly-fluid-sizing/poly-fluid-sizing";
