--- a/generators/app/templates/static/scss/tools/_tools.viewport.scss
+++ b/generators/app/templates/static/scss/tools/_tools.viewport.scss
@@ -1,16 +1,23 @@
-// Max breakpoint
+/**
+ * Context
+ */
 $max-width: 1440;
 $max-height: 900;
 
-// Function
+/**
+ * Viewport width function
+ * 1. 1 vw is equal to 1% of the viewport width
+ */
 @function get-vw($target) {
-    // 1 vw is equal to 1% of the viewport width
-    $vw-context: ($max-width * 0.01) * 1px; // 1% viewport width
+    $vw-context: ($max-width * 0.01) * 1px; /* 1 */
     @return ($target/$vw-context) * 1vw;
 }
 
+/**
+ * Viewport height function
+ * 1. 1 vw is equal to 1% of the viewport width
+ */
 @function get-vh($target) {
-    // 1 vw is equal to 1% of the viewport width
-    $vw-context: ($max-height * 0.01) * 1px; // 1% viewport width
+    $vw-context: ($max-height * 0.01) * 1px; /* 1 */
     @return ($target/$vw-context) * 1vh;
 }
