--- a/generators/app/templates/static/scss/tools/_tools.transitions.scss
+++ b/generators/app/templates/static/scss/tools/_tools.transitions.scss
@@ -1,3 +1,6 @@
+/**
+ * Get transition easing from $settings-transitions-easing
+ */
 @function getTransitionEasing($transitionEasing: "default") {
     @if (map-has_key($settings-transitions-easing, $transitionEasing)) {
         @return map-get($settings-transitions-easing, $transitionEasing);
@@ -6,6 +9,14 @@
     }
 }
 
+/**
+ * Transition function
+ * @param {string} $transitionName - Name of the transition from $settings-transitions
+ * @param {string} $transitionEasing - get transition easing from $settings-transitions-easing
+ * usage:
+ * transition: getTransition;
+ * transition: getTransition(slide, ease-in-quad);
+ */
 @function getTransition(
     $transitionName: "default",
     $transitionEasing: getTransitionEasing()
