--- a/generators/app/templates/static/scss/elements/_elements.html.scss
+++ b/generators/app/templates/static/scss/elements/_elements.html.scss
@@ -1,9 +1,11 @@
-html {
-    @include font-default;
-    @include default-font-size;
-    color: $black;
-    background-color: $white;
+html,
+body {
+    width: 100%;
+    height: 100%;
+    -webkit-font-smoothing: antialiased;
+}
 
+html {
     &.is-locked {
         top: 0;
         left: 0;
@@ -12,9 +14,9 @@ html {
     }
 }
 
-html,
 body {
-    width: 100%;
-    height: 100%;
-    -webkit-font-smoothing: antialiased;
+    @include font-default;
+    @include default-font-size;
+    color: $black;
+    background-color: $white;
 }
