--- a/generators/app/templates/static/scss/tools/_tools.breakpoints.scss
+++ b/generators/app/templates/static/scss/tools/_tools.breakpoints.scss
@@ -1,7 +1,17 @@
+/**
+ * Get breakpoint from breakpoints settings map
+ */
 @function getBreakpoint($breakpointKey) {
     @return map-get($settings-breakpoints, $breakpointKey);
 }
 
+/**
+ * Media query mixin
+ * @param {} $to - Value from $settings-breakpoints
+ * available breakpoints can be found in _settings.breakpoints.scss
+ * usage:
+ * @include mq(md){};
+ */
 @mixin mq($to: null, $from: null, $and: null) {
     @if $from != null and $to != null {
         @if $and != null {
