b-creative - underline and capitalize utilities

--- a/generators/app/templates/static/scss/utilities/_utilities.typography.scss
+++ b/generators/app/templates/static/scss/utilities/_utilities.typography.scss
@@ -89,6 +89,14 @@
     text-align: center;
 }
 
+.u-underline {
+    text-decoration: underline;
+}
+
+.u-capitalize {
+    text-transform: capitalize;
+}
+
 .u-fw-thin,
 .u-fw-100 {
     font-weight: 100;
