b-creative - add interaction tools, add capitalize font utility, change vendor name to vendors

--- a/generators/app/templates/static/scss/tools/_tools.index.scss
+++ b/generators/app/templates/static/scss/tools/_tools.index.scss
@@ -1,5 +1,6 @@
 @import "tools.breakpoints";
 @import "tools.fonts";
+@import "tools.interaction";
 @import "tools.transitions";
 @import "tools.viewport";
 @import "tools.zindex";
