--- a/generators/app/templates/static/scss/tools/_tools.breakpoints.scss
+++ b/generators/app/templates/static/scss/tools/_tools.breakpoints.scss
@@ -9,8 +9,10 @@
  * Media query mixin
  * @param {} $to - Value from $settings-breakpoints
  * available breakpoints can be found in _settings.breakpoints.scss
- * usage:
+ * usage for max width:
  * @include mq(md){};
+ * usage for min width:
+ * @include mq(null, md)
  */
 @mixin mq($to: null, $from: null, $and: null) {
     @if $from != null and $to != null {
