--- a/generators/app/templates/static/scss/tools/_tools.fonts.scss
+++ b/generators/app/templates/static/scss/tools/_tools.fonts.scss
@@ -7,6 +7,7 @@
  * @param {string} $font-name - Font style property (if the font is italic)
  * usage:
  * @include font-face("Hanken-Grotesk", "HankenGrotesk-Regular");
+ * usage for weight or style other than default
  * @include font-face(
  *  "Hanken-Grotesk",
  *  "HankenGrotesk-SemiBold",
