--- a/generators/app/templates/static/scss/style.scss
+++ b/generators/app/templates/static/scss/style.scss
@@ -10,6 +10,11 @@
  */
 @import "settings/settings.index";
 
+/*
+ * Needs to be here because of settings.spacings.scss
+ */
+@import "tools/tools.spacings";
+
 /**
  * Generic
  */
