--- a/generators/app/templates/static/scss/settings/_settings.spacings.scss
+++ b/generators/app/templates/static/scss/settings/_settings.spacings.scss
@@ -1,7 +1,7 @@
 /**
  * Spacings
  *
- * @include new-spacing("margin-top", "lg")
+ * @include spacing("margin-top", "lg")
  */
 $settings-spacings: (
         "xxs": ($breakpoint-sm: 20px, $breakpoint-xl: 30px),
