--- a/generators/app/templates/static/scss/tools/_tools.spacings.scss
+++ b/generators/app/templates/static/scss/tools/_tools.spacings.scss
@@ -1,7 +1,7 @@
 /*
  * Spacings
  *
- * @include new-spacing("margin-top", "lg")
+ * @include spacing("margin-top", "lg")
  */
 @mixin spacing($property, $spacing) {
     @include poly-fluid-sizing($property, getSpacingValues($spacing));
