b-creative - spacing mixin scss fixes

--- a/generators/app/templates/static/scss/tools/_tools.index.scss
+++ b/generators/app/templates/static/scss/tools/_tools.index.scss
@@ -1,6 +1,7 @@
 @import "tools.breakpoints";
 @import "tools.fonts";
 @import "tools.interaction";
+@import "tools.spacings";
 @import "tools.transitions";
 @import "tools.viewport";
 @import "tools.zindex";
