b-creative - responsive values updates

--- a/generators/app/templates/static/scss/elements/_elements.html.scss
+++ b/generators/app/templates/static/scss/elements/_elements.html.scss
@@ -4,8 +4,8 @@ body {
 }
 
 body {
-    @include font-default;
-    @include default-font-size;
+    @extend .u-b0;
+
     color: $black;
     background-color: $white;
 }
