--- a/generators/app/templates/static/scss/tools/_tools.index.scss
+++ b/generators/app/templates/static/scss/tools/_tools.index.scss
@@ -1,8 +1,8 @@
 @import "tools.breakpoints";
 @import "tools.fluid";
-@import "tools.fonts";
 @import "tools.interaction";
 @import "tools.transitions";
+@import "tools.typography";
 @import "tools.viewport";
 @import "tools.zindex";
 
