--- a/generators/app/templates/static/scss/tools/_tools.interaction.scss
+++ b/generators/app/templates/static/scss/tools/_tools.interaction.scss
@@ -15,9 +15,7 @@
         }
     }
 
-    @media (hover: hover),
-    all and (-ms-high-contrast: none),
-    (-ms-high-contrast: active) {
+    @media (hover: hover), all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
         &:hover {
             /* 2 */
             @content;
