--- a/generators/app/templates/static/scss/tools/_tools.transitions.scss
+++ b/generators/app/templates/static/scss/tools/_tools.transitions.scss
@@ -17,10 +17,7 @@
  * transition: getTransition;
  * transition: getTransition(slide, ease-in-quad);
  */
-@function getTransition(
-    $transitionName: "default",
-    $transitionEasing: getTransitionEasing()
-) {
+@function getTransition($transitionName: "default", $transitionEasing: getTransitionEasing()) {
     @if (map-has_key($settings-transitions, $transitionName)) {
         @return map-get($settings-transitions, $transitionName) getTransitionEasing($transitionEasing);
     } @else {
@@ -46,11 +43,7 @@
 @function getCustomTransition($transitions...) {
     $unfoldedTransitions: ();
     @each $transition in $transitions {
-        $unfoldedTransitions: append(
-                        $unfoldedTransitions,
-                        unfoldTransition($transition),
-                        comma
-        );
+        $unfoldedTransitions: append($unfoldedTransitions, unfoldTransition($transition), comma);
     }
     @return $unfoldedTransitions;
 }
