b-creative - naming proposal

--- a/generators/app/templates/static/scss/objects/_objects.index.scss
+++ b/generators/app/templates/static/scss/objects/_objects.index.scss
@@ -5,4 +5,4 @@
 @import "objects.mobile-navigation";
 @import "objects.navigation";
 @import "objects.page";
-@import "objects.sections";
+@import "objects.section";
