b-creative - naming proposal

--- a/generators/app/templates/static/scss/components/_components.index.scss
+++ b/generators/app/templates/static/scss/components/_components.index.scss
@@ -1,4 +1,5 @@
 @import "components.button";
+@import "components.cookie-message";
 @import "components.footer";
 @import "components.header";
 @import "components.loader";
