--- a/generators/app/templates/static/scss/tools/_tools.interaction.scss
+++ b/generators/app/templates/static/scss/tools/_tools.interaction.scss
@@ -22,3 +22,22 @@
         }
     }
 }
+
+/**
+ * Focus accessibility support mixin
+ * Enable box shadow for focusable (tabbable) elements
+ * 1. Target only elements that are not disabled and need a visible indicator to show focus
+ * usage:
+ * @include focus{}
+ */
+@mixin focus() {
+    &:active,
+    &:focus {
+        /* 1 */
+        &:not(:disabled):focus-visible {
+            outline: 0;
+            box-shadow: 0 0 0 2px $focus-indicator-divider-color, 0 0 0 4px $focus-indicator-color;
+            @content;
+        }
+    }
+}
