--- a/generators/app/templates/static/scss/tools/_tools.index.scss
+++ b/generators/app/templates/static/scss/tools/_tools.index.scss
@@ -5,6 +5,7 @@
 @import "tools.typography";
 @import "tools.viewport";
 @import "tools.zindex";
+@import "tools.scrollbar";
 
 /**
  * Third party tools
