b-creative - architectural changes, renames, updates

--- a/generators/app/templates/static/scss/components/_components.index.scss
+++ b/generators/app/templates/static/scss/components/_components.index.scss
@@ -1,3 +1,6 @@
+/**
+ * Components
+ */
 @import "components.button";
 @import "components.cookie-message";
 @import "components.footer";
@@ -6,3 +9,7 @@
 @import "components.mobile-navigation";
 @import "components.navigation";
 @import "components.pagination";
+
+/**
+ * Modules
+ */
