--- a/generators/app/templates/static/scss/style.scss
+++ b/generators/app/templates/static/scss/style.scss
@@ -11,9 +11,9 @@
 @import "settings/settings.index";
 
 /**
- * Generic
+ * Generics
  */
-@import "generic/generic.index";
+@import "generics/generics.index";
 
 /**
  * Elements
@@ -41,6 +41,6 @@
 @import "utilities/utilities.index";
 
 /**
- * Vendor
+ * Vendors
  */
 @import "vendors/vendors.index";
