--- a/generators/app/templates/static/scss/tools/_tools.viewport.scss
+++ b/generators/app/templates/static/scss/tools/_tools.viewport.scss
@@ -1,3 +1,5 @@
+@use "sass:math";
+
 /**
  * Context
  */
@@ -13,7 +15,7 @@ $max-height: 900;
  */
 @function get-vw($size) {
     $vw-context: ($max-width * 0.01) * 1px; /* 1 */
-    @return ($size / $vw-context) * 1vw;
+    @return (math.div($size, $vw-context)) * 1vw;
 }
 
 /**
