--- a/generators/app/templates/static/scss/settings/_settings.colors.scss
+++ b/generators/app/templates/static/scss/settings/_settings.colors.scss
@@ -18,6 +18,12 @@ $mango: #f7b334;
 $slate: #3c5163;
 
 /**
+ * Colors - personalized details (scrollbars, text highlight color)
+ */
+$personalized-primary-color: #000000;
+$personalized-secondary-color: #ffffff;
+
+/**
  * Colors - focus accessibility
  */
 $focus-indicator-divider-color: $white;
