--- a/generators/app/templates/static/scss/tools/_tools.scrollbar.scss
+++ b/generators/app/templates/static/scss/tools/_tools.scrollbar.scss
@@ -15,3 +15,42 @@
         display: none;
     }
 }
+
+/**
+ * usage:
+ *  div {
+ *      @include custom-scrollbar;
+ *  }
+ *
+ * NOTE: won't work properly with fixed elements (e.g. custom background that's position: fixed; in the background)
+ */
+@mixin custom-scrollbar {
+    scrollbar-width: thin;
+    scrollbar-color: $personalized-secondary-color $personalized-primary-color;
+    scrollbar-gutter: stable;
+
+    &::-webkit-scrollbar {
+        width: 10px;
+        cursor: pointer;
+        background-color: inherit;
+    }
+
+    &::-webkit-scrollbar-track {
+        background-color: rgba($personalized-secondary-color, 0);
+
+        &:hover {
+            background-color: rgba($personalized-secondary-color, 0.2);
+        }
+    }
+
+    &::-webkit-scrollbar-thumb {
+        border-radius: 50px;
+        border: 2px solid transparent;
+        background-clip: content-box;
+        background-color: rgba($personalized-primary-color, 0.2);
+
+        &:hover {
+            background-color: rgba($personalized-primary-color, 0.9);
+        }
+    }
+}
