--- a/generators/app/templates/static/scss/settings/_settings.colors.scss
+++ b/generators/app/templates/static/scss/settings/_settings.colors.scss
@@ -20,8 +20,10 @@ $slate: #3c5163;
 /**
  * Colors - personalized details (scrollbars, text highlight color)
  */
-$personalized-primary-color: #000000;
-$personalized-secondary-color: #ffffff;
+$scrollbar-primary-color: $black;
+$scrollbar-secondary-color: $white;
+$text-highlight-primary-color: $black;
+$text-highlight-secondary-color: $white;
 
 /**
  * Colors - focus accessibility
