--- a/generators/app/templates/static/scss/tools/_tools.index.scss
+++ b/generators/app/templates/static/scss/tools/_tools.index.scss
@@ -9,6 +9,7 @@
 @import "tools.viewport";
 @import "tools.zindex";
 @import "tools.scrollbar";
+@import "tools.percentage";
 
 /**
  * Third party tools
