--- a/generators/app/templates/static/scss/tools/_tools.percentage.scss
+++ b/generators/app/templates/static/scss/tools/_tools.percentage.scss
@@ -1,13 +1,12 @@
-@use 'sass:math';
+@use "sass:math";
 
 /**
- * Percentage mixin
- * Abbreviation mixin for using percentage without math.div
+ * Percentage function
+ * Abbreviation function for using percentage without math.div
  * https://sass-lang.com/documentation/breaking-changes/slash-div
  * usage:
- * @include percentage("padding-left", 1, 24);
+ * padding-left: percentage(1, 24);
  */
-@mixin percentage($property: null, $firstVal: null, $secondVal: null) {
-    $result: math.div($firstVal, $secondVal) * 100%;
-    #{$property}: $result;
+@function percentage($num1, $num2) {
+    @return math.percentage(math.div($num1, $num2));
 }
