update to tools.fluid and nessasery changes to settings.breakpoints and tools.viewport:  - scaling from 1440 to 1920 is the same  - from 1920 upwords scales with sizes taken from 1920 (get vw devides with 1920)

--- a/generators/app/templates/static/scss/tools/_tools.fluid.scss
+++ b/generators/app/templates/static/scss/tools/_tools.fluid.scss
@@ -6,11 +6,11 @@
     @if $size != null {
         @include poly-fluid-sizing("font-size", getFontValues($size));
     }
-    @include mq(null, xl) {
+    @include mq(null, xxl) {
         @if $value != null {
-            font-size: get-vw($value);
+            font-size: get-vw($value, $breakpoint-xxl);
         } @else {
-            font-size: get-vw(map-deep-get($settings-typography, $size, $breakpoint-xl));
+            font-size: get-vw(map-deep-get($settings-typography, $size, $breakpoint-xl), $breakpoint-xxl);
         }
     }
 }
@@ -35,11 +35,11 @@
     } @else if $value != null {
         #{$property}: $value;
     }
-    @include mq(null, xl) {
+    @include mq(null, xxl) {
         @if $value != null {
-            #{$property}: get-vw($value);
+            #{$property}: get-vw($value, $breakpoint-xxl);
         } @else {
-            #{$property}: get-vw(map-deep-get($settings-spacings, $spacing, $breakpoint-xl));
+            #{$property}: get-vw(map-deep-get($settings-spacings, $spacing, $breakpoint-xl), $breakpoint-xxl);
         }
     }
 }
