removed placeholder selectors

--- a/generators/app/templates/static/scss/utilities/_utilities.typography.scss
+++ b/generators/app/templates/static/scss/utilities/_utilities.typography.scss
@@ -1,7 +1,6 @@
 @use "sass:math";
 
-.u-a5,
-%u-a5 {
+.u-a5 {
     @include fontSize("a5");
 
     font-family: $font-primary;
@@ -9,8 +8,7 @@
     letter-spacing: normal;
 }
 
-.u-a4,
-%u-a4 {
+.u-a4 {
     @include fontSize("a4");
 
     font-family: $font-secondary;
@@ -18,8 +16,7 @@
     letter-spacing: math.div(-1.33, 64) * 1em;
 }
 
-.u-a3,
-%u-a3 {
+.u-a3 {
     @include fontSize("a3");
 
     font-family: $font-primary;
@@ -27,8 +24,7 @@
     letter-spacing: math.div(-1, 48) * 1em;
 }
 
-.u-a2,
-%u-a2 {
+.u-a2 {
     @include fontSize("a2");
 
     font-family: $font-secondary;
@@ -36,8 +32,7 @@
     letter-spacing: math.div(-0.8, 41) * 1em;
 }
 
-.u-a1,
-%u-a1 {
+.u-a1 {
     @include fontSize("a1");
 
     font-family: $font-primary;
@@ -45,8 +40,7 @@
     letter-spacing: normal;
 }
 
-.u-b0,
-%u-b0 {
+.u-b0 {
     @include fontSize("b0");
 
     font-family: $font-secondary;
@@ -54,8 +48,7 @@
     letter-spacing: normal;
 }
 
-.u-b1,
-%u-b1 {
+.u-b1 {
     @include fontSize("b1");
 
     font-family: $font-primary;
@@ -63,8 +56,7 @@
     letter-spacing: normal;
 }
 
-.u-b2,
-%u-b2 {
+.u-b2 {
     @include fontSize("b2");
 
     font-family: $font-secondary;
@@ -72,8 +64,7 @@
     letter-spacing: math.div(-0.1, 15) * 1em;
 }
 
-.u-b3,
-%u-b3 {
+.u-b3 {
     @include fontSize("b3");
 
     font-family: $font-primary;
@@ -81,8 +72,7 @@
     letter-spacing: normal;
 }
 
-.u-b4,
-%u-b4 {
+.u-b4 {
     @include fontSize("b4");
 
     font-family: $font-secondary;
