--- a/generators/app/templates/static/scss/settings/_settings.index.scss
+++ b/generators/app/templates/static/scss/settings/_settings.index.scss
@@ -7,6 +7,7 @@
 @import "settings.transitions";
 @import "settings.typography";
 @import "settings.zindex";
+@import "settings.ratio";
 
 /**
  * Third party settings
